[package]
name = "my-ssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = {path = "/home/gaojunxin/code/rust/iced_aw", features = [
    "menu",
    "quad",
    "icon_text",
    "split",
    "tab_bar",
    "tabs"
] }
iced = {features = ["svg", "image"]}
termion = "*"